<resources>
    <string name="app_name">Okey Scores</string>
    <string name="upper_app_name">OKEY SCORES</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
    <string name="create">CREATE</string>
    <string name="register">Register</string>
    <string name="create_new_game">Create New Game</string>
</resources>