<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha=".3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/poker_bg" />

            <TextView
                android:id="@+id/tvAppLogo"
                style="@style/UpperAppNameStyle"
                android:textStyle="bold|italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="48sp"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRegister"
                android:text="@string/register"
                android:layout_marginTop="25dp"
                android:textStyle="italic"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="32sp"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintTop_toBottomOf="@+id/tvAppLogo" />
            <EditText
                android:id="@+id/edEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress"
                android:background="#30ffffff"
                android:hint="@string/email"
                android:drawableStart="@drawable/mail_ic"
                android:drawableTint="@color/white"
                android:drawablePadding="4dp"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/tvRegister">
            </EditText>


            <EditText
                android:id="@+id/edUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#30ffffff"
                android:hint="@string/username"
                android:drawableStart="@drawable/username_ic"
                android:drawableTint="@color/white"
                android:drawablePadding="2dp"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edEmail">
            </EditText>

            <EditText
                android:id="@+id/edName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="#30ffffff"
                android:drawableStart="@drawable/electric_ic"
                android:drawablePadding="2dp"
                android:drawableTint="@color/white"
                android:hint="@string/name"
                android:padding="15dp"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edUsername">
            </EditText>

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#30ffffff"
                android:hint="@string/password"
                android:padding="15dp"
                android:textColor="@color/white"
                android:drawableStart="@drawable/password_icon"
                android:drawableTint="@color/white"
                android:drawablePadding="2dp"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edName">
            </EditText>


            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnCreateAccount"
                style="@style/WhiteButtonStyle"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="30dp"
                android:text="@string/create"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/edPassword" />


            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnAlreadyHaveAnAccount"
                style="@style/SkyBlueButtonStyle"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginBottom="60dp"
                android:text="@string/already_have_an_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guidelineRegisterRight"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/guidelineRegisterLeft" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRegisterLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRegisterRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>